docs : added documentation for Delete Opening
